--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -67,7 +67,7 @@
 .signup-body,
 .login-body {
     height: 100vh;
-    background: linear-gradient(to bottom , rgba(0,0,0,0.6)),url("/assest/imgs/bg-02.jpg"); 
+    background: linear-gradient(to bottom , rgba(0,0,0,0.6)),url("../imgs/bg-02.jpg"); 
     background-repeat: no-repeat;
     background-size: 200% 200%;
     animation: backgroundmoving 20s linear infinite;
