--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,8 @@
         background-color: rgba(0, 0, 0, 0.9) !important;
         position: absolute;
         top: 72px;
+        left:50%;
+        transform: translateX(-50%);
         width: 92%;
         padding: 15px;
         border-bottom-left-radius: 10px;
